[package]
name = "wamr-sys"
version = "0.2.0"
authors = [
  "Rahul Thakoor <rahul.thakoor@gmail.com>",  # Initiator
  "Horst Schwarz <horst.schwarz@joydev.com>",
]
edition = "2018"
links = "iwasm"
description = "Rust bindings to webassembly micro runtime, forked from https://github.com/rahul-thakoor/wamr-sys"
license = "MIT OR Apache-2.0"
repository = "https://github.com/meshins/wamr-sys"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
bindgen = "0.56"
build-target = "0.4"
